Dheeraj first Commit-06/10/2017

--- a/app/src/main/res/layout/bottom.xml
+++ b/app/src/main/res/layout/bottom.xml
@@ -20,7 +20,7 @@
         android:layout_centerInParent="true"
         android:background="@null"
         android:padding="@dimen/dim_10"
-        android:src="@drawable/ic_home" />
+        android:src="@drawable/ic_home_active" />
 
         <!--<TextView
             android:id="@+id/tv_home"
