--- a/app/src/main/res/layout/activity_signup_one.xml
+++ b/app/src/main/res/layout/activity_signup_one.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     android:background="@drawable/main_gradient_bg"
     android:paddingTop="@dimen/dim_10"
-    tools:context="com.localfriend.SigninActivityOne">
+    tools:context="com.localfriend.SignupActivityOne">
 
-   <include
-       layout="@layout/toolbar_common"/>
+    <include
+        layout="@layout/toolbar_common"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,20 +23,22 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome back, Enter your\n Mobile number ?"
+            android:text="Hi there ! Tell us, What's\n Your Name"
             android:textColor="@color/white"
             android:textSize="@dimen/dim_18"
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/edt_cust_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dim_10"
             android:backgroundTint="@color/white"
-            android:inputType="phone"
+            android:hint="FULL NAME"
+            android:inputType="textPersonName"
             android:maxLines="1"
-            android:id="@+id/edt_cust_mobile"
             android:textColor="@color/white"
+            android:textColorHint="@color/white"
             android:textSize="@dimen/dim_16"
 
             />
@@ -60,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="Step 1 of 2"
+            android:text="Step 1 of 4"
             android:textColor="@color/white"
             android:textSize="@dimen/dim_18"
             android:textStyle="bold" />
