--- a/app/src/main/res/layout/item_log.xml
+++ b/app/src/main/res/layout/item_log.xml
@@ -10,5 +10,5 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dim_10"
         android:padding="5dp"
-        android:textColor="@color/black" />
+        android:textColor="@color/white" />
 </LinearLayout>
