--- a/app/src/main/res/layout/nav_drawer_row.xml
+++ b/app/src/main/res/layout/nav_drawer_row.xml
@@ -14,7 +14,7 @@
         android:layout_centerVertical="true"
         android:gravity="center_vertical"
         android:padding="@dimen/dim_14"
-        android:textColor="@color/blue_text"
+        android:textColor="@color/white"
         android:textSize="@dimen/dim_18" />
 
 
