--- a/app/src/main/res/layout/activity_all.xml
+++ b/app/src/main/res/layout/activity_all.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#F7F7F7"
+            app:tabSelectedTextColor="#19598C"
             app:tabMode="scrollable"/>
     </android.support.design.widget.AppBarLayout>
 
