--- a/app/src/main/res/layout/all_items.xml
+++ b/app/src/main/res/layout/all_items.xml
@@ -35,6 +35,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/dim_15"
             android:text="Veggie Burger"
+
             android:textColor="@color/black"
             android:textSize="@dimen/dim_18" />
 
@@ -48,6 +49,7 @@
             android:drawablePadding="@dimen/dim_10"
             android:gravity="center_vertical"
             android:text="Add To Cart"
+            android:id="@+id/tv_add_cart"
             android:textColor="@color/black"
             android:textSize="@dimen/dim_18" />
     </RelativeLayout>
