--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/home_bg"
+        android:orientation="vertical">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -162,4 +167,5 @@
                 />
         </LinearLayout>
     </RelativeLayout>
+        </LinearLayout>
 </LinearLayout>
